# freelancehunt_parser_bot

./: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements.txt
admin/: Dockerfile  app.py  config.py  gunicorn_conf.py  views.py
admin/templates/: index.html
admin/templates/admin/: index.html
admin/templates/security/: login_user.html
app/core/: config.py
app/db/: models.py
app/db/crud/: user.py
app/handlers/: __init__.py
app/handlers/admin/: __init__.py  manage_categories.py
app/handlers/user/: __init__.py  start.py  text_handlers.py
app/keyboards/: __init__.py  admin.py  categories.py  user.py
app/parser/: freelancehunt.py
bot/: __main__.py
bot/core/: config.py  logger.py
bot/db/: models.py  session.py
bot/filters/: admin.py
bot/handlers/: __init__.py
bot/handlers/admin/: manage_categories.py
bot/handlers/user/: __init__.py  filters.py  manage_data.py  start.py  text_handlers.py
bot/keyboards/inline/: __init__.py  auth.py  categories.py
bot/keyboards/reply/: __init__.py  categories.py  menu.py
bot/parser/: __init__.py  freelancehunt.py
bot/scripts/: dump_data.py
bot/services/: __init__.py  categories.py  users.py
bot/utils/: db.py  texts.py
migrations/: env.py
migrations/versions/: 23b62ad484d1_first_migration.py  32742f5d7403_user_field.py
